objects/Target_Account_Selling__c.object
<CustomObject>
    <description>KF(20130603) Add for Labor, TAS object (Target Account Selling)</description>
    <fields>
        <fullName>AIM__c</fullName>
        <label>AIM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANA_Leader_Engagement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the level of engagement by Anthem Leadership?</inlineHelpText>
        <label>Anthem Leader Engagement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANA_Leaders_Engaged__c</fullName>
        <inlineHelpText>Is Anthem Leadership team engaged with this prospect?</inlineHelpText>
        <label>Anthem Leaders Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Account Selling</relationshipLabel>
        <relationshipName>Target_Account_Selling</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ana_Leader_Engaged_Optional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is there a second Anthem Leadership team engaged with this prospect?</inlineHelpText>
        <label>Anthem Leader Engaged (Optional)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Target Account Selling (Ana Leader Engaged (Optional))</relationshipLabel>
        <relationshipName>Target_Account_Selling2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ana_Leader_Engaged__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anthem Leader Engaged</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Target Account Selling (Ana Leader Engaged)</relationshipLabel>
        <relationshipName>Target_Account_Selling3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anthem_Health_Guide__c</fullName>
        <label>Anthem Health Guide</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Spend_Year__c</fullName>
        <label>Anthem Spend Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
                <value>
                    <fullName>2044</fullName>
                </value>
                <value>
                    <fullName>2045</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Vendor_Spend__c</fullName>
        <label>Anthem Vendor Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CDHP__c</fullName>
        <label>CDHP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier_1_Members__c</fullName>
        <label>Carrier 1 Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carrier_2_Members__c</fullName>
        <label>Carrier 2 Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carrier_3_Members__c</fullName>
        <label>Carrier 3 Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Castlight__c</fullName>
        <label>Castlight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cede_Required__c</fullName>
        <label>Cede Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ceding_Plan__c</fullName>
        <inlineHelpText>Required if selecting Cede Required</inlineHelpText>
        <label>Ceding Plan</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cede_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Cross Blue Shield of Alabama</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Arizona</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Arkansas</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Colorado</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Connecticut</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Florida</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Georgia</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Illinois - HCSC</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Indiana</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Kansas</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Kansas City (Missouri)</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Kentucky</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Louisiana</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Maine</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Michigan</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Minnesota</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Mississippi</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Missouri</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Montana - HCSC</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Nebraska</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Nevada</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of New Hampshire</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of New Mexico - HCSC</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of North Carolina</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of North Dakota</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Ohio</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of Rhode Island</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield of South Carolina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Characteristics__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field limited to 255 Characters</inlineHelpText>
        <label>Client Characteristics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_History__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field limited to 255 Characters</inlineHelpText>
        <label>Client History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Relationships__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Relationships</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Title__c</fullName>
        <formula>Contact_Name__r.Title</formula>
        <label>Contact Name Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Target Account Selling</relationshipLabel>
        <relationshipName>Target_Account_Selling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentDentalCarrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Dental Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Account Selling (Current Dental Carrier)</relationshipLabel>
        <relationshipName>Target_Account_Selling4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentMedicalCarrier1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Medical Carrier 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Account Selling (Current Medical Carrier 1)</relationshipLabel>
        <relationshipName>Target_Account_Selling1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentMedicalCarrier2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Medical Carrier 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Account Selling (Current Medical Carrier 2)</relationshipLabel>
        <relationshipName>Target_Account_Selling2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentMedicalCarrier3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Medical Carrier 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Account Selling (Current Medical Carrier 3)</relationshipLabel>
        <relationshipName>Target_Account_Selling3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentPharmacyCarrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Pharmacy Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Account Selling (Current Pharmacy Carrier)</relationshipLabel>
        <relationshipName>Target_Account_Selling6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentVisionCarrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Vision Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Account Selling (Current Vision Carrier)</relationshipLabel>
        <relationshipName>Target_Account_Selling5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_RFP_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Expected date of next RFP</inlineHelpText>
        <label>Date RFP Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Members__c</fullName>
        <label>Dental Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <label>Dental</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAP__c</fullName>
        <label>EAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_CoC_Coverage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated CoC Coverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <label>Exchange</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRS__c</fullName>
        <inlineHelpText>Group Retiree Solutions</inlineHelpText>
        <label>GRS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HMO__c</fullName>
        <label>HMO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Wellness__c</fullName>
        <label>Health &amp; Wellness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Health_Model__c</fullName>
        <label>Integrated Health Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meets_ANA_Criteria__c</fullName>
        <label>Meets ANA Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mercer_Health_Advantage__c</fullName>
        <label>Mercer Health Advantage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Health_Consumer__c</fullName>
        <label>Mobile Health Consumer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCN__c</fullName>
        <label>NCN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Sales_Ranking__c</fullName>
        <label>National Sales Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPO__c</fullName>
        <label>PPO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pharmacy_Members__c</fullName>
        <label>Pharmacy Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacy__c</fullName>
        <label>Pharmacy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Comments__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Product Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <inlineHelpText>Prospect - Recent Contact (within the past year) 
Prospect - No recent contact - (within the past year)</inlineHelpText>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect- Recent Contact Interest</fullName>
                </value>
                <value>
                    <fullName>Prospect - Recent Contact No Interest</fullName>
                </value>
                <value>
                    <fullName>Prospect- No recent contact</fullName>
                </value>
                <value>
                    <fullName>Prospect - RFP expected</fullName>
                </value>
                <value>
                    <fullName>Prospect: Does not meet ANA criteria</fullName>
                </value>
                <value>
                    <fullName>Company No Longer Exists</fullName>
                </value>
                <value>
                    <fullName>HQ Relocated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Sales_Ranking__c</fullName>
        <label>Regional Sales Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal/External contact that has relationship with prospect</inlineHelpText>
        <label>Relationship Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Target Account Selling (Relationship Contact Name)</relationshipLabel>
        <relationshipName>Target_Account_Selling1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_status__c</fullName>
        <inlineHelpText>Internal/External contacts relationship with prospect</inlineHelpText>
        <label>Relationship status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Prior Business</fullName>
                </value>
                <value>
                    <fullName>Prior Employment</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Affiliation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State_Sales_Ranking__c</fullName>
        <inlineHelpText>Ranking is based on prospect Situs State</inlineHelpText>
        <label>Situs State Sales Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stop_Loss__c</fullName>
        <label>Stop Loss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Year__c</fullName>
        <label>Target Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
                <value>
                    <fullName>2044</fullName>
                </value>
                <value>
                    <fullName>2045</fullName>
                </value>
                <value>
                    <fullName>2046</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Contracts__c</fullName>
        <label>Total Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Membership__c</fullName>
        <label>Total Membership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Towers_CCMU__c</fullName>
        <label>Towers CCMU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utilization_Management_Case_Management__c</fullName>
        <label>Utilization Management/Case Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Members__c</fullName>
        <label>Vision Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>